syntax = "proto3";
package test;

option optimize_for = CODE_SIZE;
option java_multiple_files = true;
option java_outer_classname = "TestProtocol";
option java_package = "org.mitallast.queue.proto.test";

message AppendWord {
    string message = 1;
}

message RegisterSet {
    int64 requestId = 1;
    string value = 2;
}

message RegisterGet {
    int64 requestId = 1;
}

message RegisterValue {
    int64 requestId = 1;
    string value = 2;
}

message RegisterByteSet {
    int64 requestId = 1;
    bytes value = 2;
}

message RegisterByteOK {
    int64 requestId = 1;
}

message RegisterByteGet {
    int64 requestId = 1;
}

message RegisterByteValue {
    int64 requestId = 1;
    bytes value = 2;
}

message TestFSMMessage {
}

message TestLongMessage {
    int64 value = 1;
}